--- a/angular/src/app/home/home.page.html
+++ b/angular/src/app/home/home.page.html
@@ -12,7 +12,7 @@
 <ion-content [fullscreen]="true" class="header" >
   <ion-header collapse="condense">
     <ion-toolbar>
-    </ion-toolbar>test
+    </ion-toolbar>
   </ion-header>
   <ion-searchbar></ion-searchbar>
 
